# Link-Model

./: .gitignore  README.md  compose.yaml  covert_to_coreml.py  main.py  pipelines.yaml  pyproject.toml  speech_main.py
benchmark/: __init__.py  config.py  corpus.py  exporters.py  judge.py  main.py  metrics.py  paths.py  prepare.py  preserve.py  quantize.py  registry.py  report.py  runtime.py  schemas.py
doc/: benchmark.md
final/: covert_to_coreml.py  slice_update_key_value_cache.py  test_mlx_model.py
helper/: coreml_bundle_helpers.py  coreml_quantization_helpers.py  slice_update_key_value_cache.py  stateful_hunyuan_for_coreml.py  stateless_hunyuan_for_coreml.py
hy_models/: __init__.py  coreml_a8_stateful.py  download.py
shared/: __init__.py  catalog.py  config.py  files.py
speech/: __init__.py  catalog.py  cli.py  package.py  prepare.py  storage.py
swift-benchmarks/: Package.resolved  Package.swift  README.md  run_benchmark.sh
test/: benchmark_coreml_all_models.py  benchmark_coreml_cache_tiers.py  benchmark_coreml_variants.py  memory_utils.py  test_coreml_model.py  test_coreml_quantization_regression.py  test_mlx_model.py
tests/: test_convert_hy_mt_to_coreml.py  test_coreml_a8_stateful.py  test_download.py  test_preserve.py  test_translation_manifests.py  test_unified_pipeline.py
tools/: convert_hy_mt_to_coreml.py  download_hy_mt_models.py  translation_probe.py
transform/: download_manifest.py  downloader.py  generate_speech_catalog.py  generate_translation_catalog.py  legacy_migration.py  model_registry.py  package_quantized_onnx.py  paths.py  (+10 more)
(+64 files in other folders)
